--- a/app/src/main/resources/static/register/hospitals-list.html
+++ b/app/src/main/resources/static/register/hospitals-list.html
@@ -79,105 +79,43 @@
         <span class="d-none d-lg-block">MyClinic</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
-    </div><!-- End Logo -->
-
-    <div class="search-bar">
-      <form class="search-form d-flex align-items-center" method="POST" action="#">
-        <input type="text" name="query" placeholder="Search" title="Enter search keyword">
-        <button type="submit" title="Search"><i class="bi bi-search"></i></button>
-      </form>
-    </div><!-- End Search Bar -->
-
+    <!-- End Logo -->
     <div class="top-menu">
-      <a href="pages-notice.html" class="nav-link collapsed"><span>공지사항</span></a>
+      <a href="hospitals-list.html" class="nav-link collapsed"><span>병원</span></a>
 
-      <a href="doctors-community-main.html" class="nav-link"><span>커뮤니티</span></a>
-
-      <a href="doctors-signup.html" class="nav-link collapsed"><span>회원가입(의사)</span></a>
+      <a href="doctors-community-main.html" class="nav-link collapsed"
+        ><span>커뮤니티</span></a
+      >
     </div>
-
     <nav class="header-nav ms-auto">
       <ul class="d-flex align-items-center">
-
-        <li class="nav-item dropdown">
-
-          <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-            <i class="bi bi-bell"></i>
-            <span class="badge bg-primary badge-number">2</span>
-          </a><!-- End Notification Icon -->
-
-          <!--우측 상단 알림 -->
-          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
-            <li class="dropdown-header">
-              확인하지 않은 알림이 있습니다.
-              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li class="notification-item">
-              <i class="bi bi-exclamation-circle text-warning"></i>
-              <div>
-                <h4>진료 답변 확인하기</h4>
-                <p>OOO 환자님 안녕하세요....</p>
-                <p>30분 전</p>
-              </div>
-            </li>
-
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li class="notification-item">
-              <i class="bi bi-x-circle text-danger"></i>
-              <div>
-                <h4>개인정보 보호 안내</h4>
-                <p>비밀번호를 변경해주세요</p>
-                <p>1 시간 전</p>
-              </div>
-            </li>
-
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li class="dropdown-footer">
-              <a href="#">Show all notifications</a>
-            </li>
-
-          </ul><!-- End Notification Dropdown Items -->
-
-        </li><!-- End Notification Nav -->
-
-
-
         <li class="nav-item dropdown pe-3">
-
-          <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="../assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span id="username" class="d-none d-md-block dropdown-toggle ps-2"></span>
-          </a><!-- End Profile Iamge Icon -->
-
-
-  </header><!-- End Header -->
+          <a class="nav-link nav-profile d-flex align-items-center pe-0">
+            <div id="pre-userimg"></div>
+            <img
+              id="userimg"
+              src="assets/img/profile-img.jpg"
+              alt="Profile"
+            />
+            <span id="username" class="d-none d-md-block ps-2"></span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
   <!-- ======= Sidebar ======= -->
   <aside id="sidebar" class="sidebar">
-
     <ul class="sidebar-nav" id="sidebar-nav">
-
       <li class="nav-heading">의사 전용 페이지</li>
 
       <li class="nav-item">
-        <a class="nav-link " href="doctors-profile.html">
+        <a class="nav-link" href="doctors-profile.html">
           <i class="bi bi-person"></i>
           <span>내 정보</span>
         </a>
-      </li><!-- End Profile Page Nav -->
+      </li>
+      <!-- End Profile Page Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" href="doctors-advices.html">
@@ -185,24 +123,21 @@
           <span>진료하기</span>
         </a>
       </li>
+
       <li class="nav-item">
-        <a class="nav-link collapsed" href="doctors-review.html">
-          <i class="bi bi-envelope"></i>
-          <span>진료 리뷰 확인</span>
-        </a>
-      </li> 
-      <li>
         <a class="nav-link collapsed" href="QnQ-doc.html">
           <i class="bi bi-question-circle"></i>
           <span>문의하기</span>
         </a>
       </li>
+
       <li class="nav-item">
         <a class="nav-link collapsed" href="hospitals-view.html">
           <i class="bi bi-card-list"></i>
           <span>내 병원 정보</span>
         </a>
       </li>
+      <!-- End Register Page Nav -->
 
       <!-- 로그아웃 태그 -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
@@ -211,35 +146,25 @@
           <i class="bi bi-box-arrow-in-right"></i>
           <span>로그아웃</span>
         </a>
-      </li><!-- End Login Page Nav -->
+      </li>
+      <!-- End Login Page Nav -->
       <script>
         $(".logout").click(() => {
-          console.log(11)
+          console.log(11);
           fetch(`http://175.106.99.31/auth/logout`, {
-            method: 'GET'
+            method: "GET",
           })
-            .then(response => response.json())
-            .then(data => {
+            .then((response) => response.json())
+            .then((data) => {
               if (data.status == "success") {
-                location.href = ""
+                location.href = "";
               } else {
-                alert("로그아웃 실패")
-                location.href = ""
+                alert("로그아웃 실패");
+                location.href = "";
               }
-            })
-        })
+            });
+        });
       </script>
-
-
-
-      <!--
-  <li class="nav-item">
-    <a class="nav-link collapsed" href="pages-blank.html">
-      <i class="bi bi-file-earmark"></i>
-      <span>Blank</span>
-    </a>
-  </li> End Blank Page Nav -->
-
     </ul>
 
   </aside><!-- End Sidebar-->
@@ -344,7 +269,7 @@
                                   <td><input id="hosTime" class="hos-time" type="text"
                                       placeholder="예:월~금 08시~18시30분,토 휴진" /></td>
                                   <td><input id="hosSub" class="hos-sub" type="text" placeholder="예: 가정의학과,소아과" /></td>
-                                  <td><input id="hosPwd" class="hos-pwd" type="password" /></td>
+                                  <td><input id="hosPwd" class="hos-pwd" type="password"/></td>
                                   <form>
                                     <td><input type="file" id="hosPhoto" class="hos-photo hospital-files"
                                         style="width: 220px;" accept="image/*" multiple required></td>
@@ -422,7 +347,31 @@
       .then(response => response.json())
       .then(data => {
         if (data.status == "success") {
-          return data.data;
+          //옥동자 이름
+          document.querySelector("#username").innerHTML = data.data.name;
+            //옥동자 이미지
+            const preImageContainer = document.querySelector("#pre-userimg");
+            const phoUrl =
+              "http://uyaxhfqyqnwh16694929.cdn.ntruss.com/member-img/" +
+              data.data.phoUrl +
+              "?type=f&w=36&h=36&quality=100&anilimit=24";
+            const phoType = data.data.phoType;
+            const phoName = data.data.phoName;
+
+            // 기존의 이미지 요소 삭제
+            const oldImg = document.querySelector("#userimg");
+            if (oldImg) {
+              oldImg.remove();
+            }
+
+            // 새로운 이미지 요소 생성 및 추가
+            const newImg = document.createElement("img");
+            newImg.setAttribute("id", "userimg");
+            newImg.setAttribute("src", phoUrl);
+            newImg.setAttribute("alt", phoName);
+            newImg.setAttribute("style", "width:36px; border-radius:50%");
+            preImageContainer.appendChild(newImg);
+            return data.data;
         } else {
           location.href = "../auth/doctors-login.html"
         }
