--- a/app/src/main/resources/static/register/hospitals-view.html
+++ b/app/src/main/resources/static/register/hospitals-view.html
@@ -127,8 +127,8 @@
       </div>
       <!-- End Logo -->
       <div class="top-menu">
-        <a href="pages-notice.html" class="nav-link collapsed"
-          ><span>공지사항</span></a
+        <a href="hospitals-list.html" class="nav-link collapsed"
+          ><span>병원</span></a
         >
 
         <a href="doctors-community-main.html" class="nav-link collapsed"
@@ -668,7 +668,7 @@
             const phoUrl =
               "http://uyaxhfqyqnwh16694929.cdn.ntruss.com/member-img/" +
               data.data.phoUrl +
-              "?type=f&w=120&h=180&quality=90&autorotate=true&faceopt=true&anilimit=24";
+              "?type=f&w=36&h=36&quality=100&anilimit=24";
             const phoType = data.data.phoType;
             const phoName = data.data.phoName;
 
@@ -759,34 +759,6 @@
 
       // // 모달 요소 참조
       const scrollingModal = document.querySelector("#scrollingModal");
-
-      // // 버튼 클릭 이벤트 리스너 추가
-      // updateBtn.addEventListener("click", function () {
-      //   // 모달 열기
-      // scrollingModal.classList.add("show");
-      // scrollingModal.style.display = "block";
-      // document.body.classList.add("modal-open");
-      // });
-
-      // // 모달 창 요소 선택
-      // const modal = document.querySelector(".modal");
-
-      // // 모달 열기 함수
-      // function openModal() {
-      //   modal.style.display = "block";
-      // }
-
-      // // 모달 닫기 함수
-      // function closeModal() {
-      //   modal.style.display = "none";
-      // }
-
-      // // ESC 키 누르면 모달 닫기
-      // document.addEventListener("keydown", function (event) {
-      //   if (event.key === "Escape") {
-      //     closeModal();
-      //   }
-      // });
 
       //모달창 get요청
       const uform = document.getElementById("update-hos-form");
