04월 26일 작업 내용 업로드

--- a/app/src/main/resources/static/auth/callback.html
+++ b/app/src/main/resources/static/auth/callback.html
@@ -81,7 +81,7 @@
               console.log(data)
               sessionStorage.setItem("token", data.naverMember.password)
               sessionStorage.setItem("email", data.naverMember.email)
-              location.href = "../register/naver-signup.html"
+              // location.href = "../register/naver-signup.html"
             }
           } else {
             console.log(data)
