--- a/app/src/main/resources/static/register/hospitals-view.html
+++ b/app/src/main/resources/static/register/hospitals-view.html
@@ -119,9 +119,9 @@
     <!-- ======= Header ======= -->
     <header id="header" class="header fixed-top d-flex align-items-center">
       <div class="d-flex align-items-center justify-content-between">
-        <a href="index.html" class="logo d-flex align-items-center">
-          <img src="../assets/img/newlogo.png" alt="" />
-          <span class="d-none d-lg-block">MyClinic</span>
+        <a class="logo d-flex align-items-center">
+          <!--  <img src="assets/img/newlogo.png" alt=""> -->
+          <span class="d-none d-lg-block">P DC</span>
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
       </div>
@@ -138,7 +138,10 @@
       <nav class="header-nav ms-auto">
         <ul class="d-flex align-items-center">
           <li class="nav-item dropdown pe-3">
-            <a class="nav-link nav-profile d-flex align-items-center pe-0">
+            <a
+              class="nav-link nav-profile d-flex align-items-center pe-0"
+              href="doctors-profile-auth.html"
+            >
               <div id="pre-userimg"></div>
               <img
                 id="userimg"
@@ -618,16 +621,60 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
-      <div class="footer-img-container">
-        <img src="../register/assets/img/bitcamplogo.png" />
-        <img
-          src="../register/assets/img/navercloudlogo.png"
-          style="width: 200px; margin-left: 50px"
-        />
-        <img
-          src="../register/assets/img/magicecole.png"
-          style="width: 150px; margin-left: 50px"
-        />
+      <div>
+        <div class="tooltip-container">
+          <a
+            href="https://github.com/whtmdgus"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="조승현"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+          </a>
+          <a
+            href="https://github.com/chaminju927"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="차민주"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+          </a>
+          <a
+            href="https://github.com/molang2"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="이준영"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+          </a>
+          <a
+            href="https://github.com/hyunwookimkim"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="김현우"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+          </a>
+          <a
+            href="https://github.com/omelase"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="이예찬"
+          >
+            <img src="../register/assets/img/gitlogo.png" style="width: 40px" />
+          </a>
+        </div>
+        <div class="footer-img-container">
+          <img src="../register/assets/img/bitcamplogo.png" />
+          <img
+            src="../register/assets/img/navercloudlogo.png"
+            style="width: 200px; margin-left: 50px"
+          />
+          <img
+            src="../register/assets/img/magicecole.png"
+            style="width: 150px; margin-left: 50px"
+          />
+        </div>
       </div>
     </footer>
     <!-- End Footer -->
