--- a/app/src/main/resources/static/register/hospitlas-profile-auth.html
+++ b/app/src/main/resources/static/register/hospitlas-profile-auth.html
@@ -66,26 +66,20 @@
     <!-- ======= Header ======= -->
     <header id="header" class="header fixed-top d-flex align-items-center">
       <div class="d-flex align-items-center justify-content-between">
-        <a href="index.html" class="logo d-flex align-items-center">
-          <img src="assets/img/logo.png" alt="" />
-          <span class="d-none d-lg-block">MyClinic</span>
+        <a class="logo d-flex align-items-center">
+          <!--  <img src="assets/img/newlogo.png" alt=""> -->
+          <span class="d-none d-lg-block">P DC</span>
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
       </div>
       <!-- End Logo -->
-      <div class="top-menu">
-        <a href="hospitals-list.html" class="nav-link collapsed"
-          ><span>병원</span></a
-        >
-
-        <a href="doctors-community-main.html" class="nav-link collapsed"
-          ><span>커뮤니티</span></a
-        >
-      </div>
       <nav class="header-nav ms-auto">
         <ul class="d-flex align-items-center">
           <li class="nav-item dropdown pe-3">
-            <a class="nav-link nav-profile d-flex align-items-center pe-0">
+            <a
+              class="nav-link nav-profile d-flex align-items-center pe-0"
+              href="doctors-profile-auth.html"
+            >
               <div id="pre-userimg"></div>
               <img
                 id="userimg"
@@ -98,6 +92,7 @@
         </ul>
       </nav>
     </header>
+    <!-- ======= Header ======= -->
 
     <!-- ======= Sidebar ======= -->
     <aside id="sidebar" class="sidebar">
