페이지 링크 이동 수정

--- a/app/src/main/resources/static/register/patients-record.html
+++ b/app/src/main/resources/static/register/patients-record.html
@@ -69,7 +69,7 @@
           <div id="pre-userimg"></div>
           <img
             id="userimg"
-            src="assets/img/profile-img.jpg"
+            src="assets/img/default_profile.png.jpg"
             alt="Profile"
           />
           <span id="username" class="d-none d-md-block ps-2"></span>
