--- a/app/src/main/resources/static/register/patients-profile-auth.html
+++ b/app/src/main/resources/static/register/patients-profile-auth.html
@@ -277,9 +277,31 @@
         .then((response) => response.json())
         .then((data) => {
           if (data.status == "success") {
-            document.querySelector("#username").innerHTML = data.data.name;
-            console.log(data.data);
-            return data.data;
+        //옥동자 이름
+        document.querySelector("#username").innerHTML = data.data.name;
+              //옥동자 이미지
+              const preImageContainer = document.querySelector("#pre-userimg");
+              const phoUrl =
+                "http://uyaxhfqyqnwh16694929.cdn.ntruss.com/member-img/" +
+                data.data.phoUrl +
+                "?type=f&w=36&h=36&quality=100&anilimit=24";
+              const phoType = data.data.phoType;
+              const phoName = data.data.phoName;
+
+              // 기존의 이미지 요소 삭제
+              const oldImg = document.querySelector("#userimg");
+              if (oldImg) {
+                oldImg.remove();
+              }
+
+              // 새로운 이미지 요소 생성 및 추가
+              const newImg = document.createElement("img");
+              newImg.setAttribute("id", "userimg");
+              newImg.setAttribute("src", phoUrl);
+              newImg.setAttribute("alt", phoName);
+              newImg.setAttribute("style", "width:36px; border-radius:50%");
+              preImageContainer.appendChild(newImg);
+              return data.data;
           } else {
             location.href = "index.html";
           }
