--- a/app/src/main/resources/static/register/QnQ.html
+++ b/app/src/main/resources/static/register/QnQ.html
@@ -82,7 +82,7 @@
           <span>Main</span>
         </a>
       </li>
-      <li class="nav-heading">My page</li>
+      <li class="nav-heading">환자 페이지</li>
 
       <li class="nav-item">
         <a class="nav-link" href="patients-profile.html">
@@ -133,6 +133,7 @@
         });
       </script>
     </ul>
+    <img src="../register/assets/img/mainlogo.png" style="height:150px; margin-top:400px; margin-left:40px;">
   </aside>
   <!-- End Sidebar-->
 
