환자 페이지 UI수정

--- a/app/src/main/resources/static/register/patients-profile.html
+++ b/app/src/main/resources/static/register/patients-profile.html
@@ -154,6 +154,7 @@
           });
         </script>
       </ul>
+      <img src="../register/assets/img/mainlogo.png" style="height:150px; margin-top:400px; margin-left:40px;">
       
       
     </aside>
