--- a/app/src/main/resources/static/register/QnQ-doc.html
+++ b/app/src/main/resources/static/register/QnQ-doc.html
@@ -243,6 +243,13 @@
           display: inline-block;
           box-sizing: border-box;
         }
+
+        .chat-send-cover {
+            width: 100%;
+            height: 13%;
+            box-sizing: border-box;
+            border-radius: 10px;
+          }
       </style>
         <div class="chat-send-cover">
           <div class="input-group mb-3">
