링크오류 수정

--- a/app/src/main/resources/static/register/QnQ-doc.html
+++ b/app/src/main/resources/static/register/QnQ-doc.html
@@ -60,7 +60,7 @@
         <li class="nav-item dropdown pe-3">
           <a
             class="nav-link nav-profile d-flex align-items-center pe-0"
-            href="doctors-profile-auth.html"
+            href="doctors-profile.html"
           >
             <div id="pre-userimg"></div>
             <img
