--- a/app/src/main/resources/static/register/patients-record.html
+++ b/app/src/main/resources/static/register/patients-record.html
@@ -64,12 +64,12 @@
       <li class="nav-item dropdown pe-3">
         <a
           class="nav-link nav-profile d-flex align-items-center pe-0"
-          href="patients-profile-auth.html"
+          href="patients-profile.html"
         >
           <div id="pre-userimg"></div>
           <img
             id="userimg"
-            src="assets/img/default_profile.png.jpg"
+            src="assets/img/default_profile.png"
             alt="Profile"
           />
           <span id="username" class="d-none d-md-block ps-2"></span>
