--- a/app/src/main/resources/static/register/patients-profile-auth.html
+++ b/app/src/main/resources/static/register/patients-profile-auth.html
@@ -75,7 +75,7 @@
       <li class="nav-item dropdown pe-3">
         <a
           class="nav-link nav-profile d-flex align-items-center pe-0"
-          href="patients-profile-auth.html"
+          href="patients-profile.html"
         >
           <div id="pre-userimg"></div>
           <img
